TOC z-index firefox issue fix

--- a/css/main.css
+++ b/css/main.css
@@ -424,6 +424,7 @@ html {
 	height: 20px;
 	left: 0;
 	top: -4px;
+	z-index: 1000;
 }
 
 	#reveal .back > a {
